--- a/app/templates/list_item.html
+++ b/app/templates/list_item.html
@@ -14,7 +14,7 @@
 
         <div id="{{ feed.id }}" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
-              <span>{{ item.descritpion | safe}}</span>
+              <span>{{ item.description | safe}}</span>
               <p class="card-text"><small>Published at: {{ item.published_at }}</small> <a href="{{ item.link }}" class="badge badge-info">Link</a></p>
           </div>
         </div>
