--- a/app/templates/list_item.html
+++ b/app/templates/list_item.html
@@ -15,7 +15,9 @@
         <div id="{{ feed.id }}" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
               <span>{{ item.description | safe}}</span>
-              <p class="card-text"><small>Published at: {{ item.published_at }}</small> <a href="{{ item.link }}" class="badge badge-info">Link</a></p>
+              <p class="card-text"><small>Published at: {{ item.published_at }}</small> <a href="{{ item.link }}" class="badge badge-info" onclick="location.href='{% url 'read' item.id  %}">Link</a></p>
+              <a href="{% url 'add_comment' item.id  %}"><button type="button" class="btn btn-outline-primary">Add commentary</button></a>
+              <button type="button" onclick="{% url 'read' item.id  %}" class="btn btn-outline-info">Mark as read</button>
           </div>
         </div>
       </div>
