--- a/app/templates/list_item.html
+++ b/app/templates/list_item.html
@@ -15,12 +15,49 @@
         <div id="{{ feed.id }}" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
               <span>{{ item.description | safe}}</span>
-              <p class="card-text"><small>Published at: {{ item.published_at }}</small> <a href="{{ item.link }}" class="badge badge-info" onclick="location.href='{% url 'read' item.id  %}">Link</a></p>
-              <a href="{% url 'add_comment' item.id  %}"><button type="button" class="btn btn-outline-primary">Add commentary</button></a>
-              <button type="button" onclick="{% url 'read' item.id  %}" class="btn btn-outline-info">Mark as read</button>
+              <p class="card-text"><small>Published at: {{ item.published_at }}</small> <a href="{{ item.link }}" class="badge badge-info">Link</a></p>
+            {% if item.commented %}
+                <div class="card border-primary mb-3" style="max-width: 18rem;">
+                  <div class="card-header">Comment</div>
+                  <div class="card-body text-primary">
+                    <p class="card-text">{{ item.comment }}</p>
+                  </div>
+                </div>
+              {% else %}
+                <a href="{% url 'add_comment' item.id  %}"><button type="button" class="btn btn-outline-primary">Add commentary</button></a>
+              {% endif %}
+
+              {% if item.read %}
+                <button type="button" class="btn btn-secondary" data-id="{{ item.id }}">Read</button>
+              {% else %}
+                <button type="button" class="btn btn-outline-info read" data-id="{{ item.id }}">Mark as read</button>
+              {% endif %}
           </div>
         </div>
       </div>
     {%  endfor %}
     </div>
+{%  endblock %}
+{%  block extra_js %}
+    <script>
+    $(".read").click(function () {
+        var itemId = $(this).data('id')
+          $.ajax({
+            url: '{% url 'read' %}',
+            data: {"itemId": itemId},
+            dataType: 'json',
+            success: function (data) {
+              if (data.sucess) {
+                alert(data.sucess);
+                window.location.reload(false);
+              }
+            },
+            error: function (data) {
+                if (data.error) {
+                alert(data.error);
+              }
+            }
+          });
+    });
+  </script>
 {%  endblock %}
