--- a/app/templates/list_feed.html
+++ b/app/templates/list_feed.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
     <div id="accordion">
-    <h2> Followed </h2>
+    {% if feeds_followed %}
+        <h2> Followed </h2>
+    {% endif %}
     {% for feed in feeds_followed %}
       <div class="card">
         <div class="card-header" id="{{ feed.id }}">
