--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,10 +44,13 @@
                 </li>
                 {% if request.user.is_authenticated %}
                     <li class="nav-item">
-
+                         <a class="nav-link" href="{% url 'list_feed' %}">Feeds </a>
                     </li>
                     <li class="nav-item">
-
+                        <a class="nav-link" href="{% url 'add_feed' %}">Add New Feed </a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="log-out-link" class="nav-link" href="{% url 'logout' %}">{% trans "Sign out" %}</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
