--- a/app/templates/list_item.html
+++ b/app/templates/list_item.html
@@ -24,7 +24,8 @@
         <div id="{{ feed.id }}" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
               <span>{{ item.description | safe}}</span>
-              <p class="card-text"><small>Published at: {{ item.published_at }}</small> <a href="{{ item.link }}" class="badge badge-info">Link</a></p>
+              <p class="card-text"><small>Published at: {{ item.published_at }}</small> <a href="{{ item.link }}"
+                                                                                           class="badge badge-info">Link</a></p>
             {% if item.commented %}
                 <div class="card border-primary mb-3" style="max-width: 66rem;">
                   <div class="card-header">Comment</div>
@@ -47,45 +48,52 @@
     {%  endfor %}
     </div>
 {%  endblock %}
+{% csrf_token %}
 {%  block extra_js %}
     <script>
     $(".read").click(function () {
         var itemId = $(this).data('id')
           $.ajax({
-            url: '{% url 'read' %}',
-            data: {"itemId": itemId},
-            dataType: 'json',
-            success: function (data) {
-              if (data.sucess) {
-                alert(data.sucess);
-                window.location.reload(false);
-              }
-            },
-            error: function (data) {
-                if (data.error) {
-                alert(data.error);
-              }
-            }
-          });
+                url: '{% url 'mark_item' %}',
+                headers: {
+                    "X-CSRFToken": '{{ csrf_token }}'
+                },
+                method: "POST",
+                data: {
+                    "item_id": itemId,
+                    "kind": "read",
+                },
+                dataType: 'json',
+                success: function (data) {
+                    alert(data.message);
+                },
+                error: function (data) {
+                    alert(data.status); // the status code
+                    alert(data.error); // the message
+                }
+            });
     });
     $(".favorite").click(function () {
         var itemId = $(this).data('id')
-          $.ajax({
-            url: '{% url 'favorite' %}',
-            data: {"itemId": itemId},
-            dataType: 'json',
-            success: function (data) {
-              if (data.sucess) {
-                alert(data.sucess);
-                window.location.reload(false);
-              }
-            },
-            error: function (data) {
-                if (data.error) {
-                alert(data.error);
-              }
-            }
-          });
+           $.ajax({
+                url: '{% url 'mark_item' %}',
+                headers: {
+                    "X-CSRFToken": '{{ csrf_token }}'
+                },
+                method: "POST",
+                data: {
+                    "item_id": itemId,
+                    "kind": "favorite",
+                },
+                dataType: 'json',
+                success: function (data) {
+                    alert(data.message);
+                },
+                error: function (data) {
+                    alert(data.status); // the status code
+                    alert(data.error); // the message
+                }
+            });
     });
   </script>
 {%  endblock %}
