refactor: adding id

--- a/app/templates/list_feed.html
+++ b/app/templates/list_feed.html
@@ -10,7 +10,7 @@
                     <h5 class="mb-0">
                         <button class="btn btn-link" data-toggle="collapse" data-target="#{{ feed.id }}"
                                 aria-expanded="true" aria-controls="{{ feed.id }}">
-                            {{ feed.title }}
+                            {{ feed.id }} - {{ feed.title }}
                         </button>
                         <div style="float: right">
                             <button type="button" class="btn btn-info update" data-id="{{ feed.id }}"> Update</button>
@@ -42,7 +42,7 @@
                     <h5 class="mb-0">
                         <button class="btn btn-link" data-toggle="collapse" data-target="#{{ feed.id }}"
                                 aria-expanded="true" aria-controls="{{ feed.id }}">
-                            {{ feed.title }}
+                            {{ feed.id }} - {{ feed.title }}
                         </button>
                     </h5>
                 </div>
