refactor: removing alert of status code

--- a/app/templates/list_item.html
+++ b/app/templates/list_item.html
@@ -68,8 +68,7 @@
                     alert(data.message);
                 },
                 error: function (data) {
-                    alert(data.status); // the status code
-                    alert(data.error); // the message
+                    alert(data.error);
                 }
             });
     });
@@ -90,8 +89,7 @@
                     alert(data.message);
                 },
                 error: function (data) {
-                    alert(data.status); // the status code
-                    alert(data.error); // the message
+                    alert(data.error);
                 }
             });
     });
