--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,11 +11,12 @@
     {% block css %}
 
         <!-- Latest compiled and minified Bootstrap CSS -->
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+              integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
               crossorigin="anonymous">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-              integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+              integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+              crossorigin="anonymous">
 
         <!-- Your stuff: Third-party CSS libraries go here -->
         {% compress css %}
@@ -44,7 +45,7 @@
                 </li>
                 {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                         <a class="nav-link" href="{% url 'list_feed' %}">Feeds </a>
+                        <a class="nav-link" href="{% url 'list_feed' %}">Feeds </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'add_feed' %}">Add New Feed </a>
@@ -55,7 +56,7 @@
                 {% else %}
                     <li class="nav-item">
                         <a id="sign-up-link" class="nav-link"
-                           href="{% url 'signup'%}">{% trans "Sign Up" %}</a>
+                           href="{% url 'signup' %}">{% trans "Sign Up" %}</a>
                     </li>
                     <li class="nav-item">
                         <a id="log-in-link" class="nav-link" href="{% url 'login' %}">{% trans "Sign In" %}</a>
@@ -93,14 +94,14 @@
 
     <!-- Bootstrap JS and its dependencies-->
     <script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
             integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
             crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"></script>
 
     <!-- Your stuff: Third-party javascript libraries go here -->
