feature: creating home

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,1 +1,9 @@
 {% extends "base.html" %}
+{% block content %}
+    <div class="jumbotron">
+        <h1 class="display-4" style="color: #007bff">Python Feed RSS</h1>
+        <p class="lead">This is an application to register, visualize and manage Feeds.</p>
+        <hr class="my-4">
+        <p>Created by: Nicolas Teodosio</p>
+    </div>
+{% endblock %}
